--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,3 +1,56 @@
 html, body {
   background-color: #4c4c4c;
+  height: 100%;
+  margin: 0;
+}
+
+#wrapper {
+    min-height: 100%;
+    width:100%;
+    display: table;
+  }
+
+.itemdisplay {
+  margin-left: 100px;
+  margin-top: 50px;
+}
+
+.itembox {
+  display: none;
+  position: absolute;
+  /*width: 300px;*/
+  background-color: rgba(255,255,255,.20);
+  padding: 2em;
+  border: solid 2px #ffffff;
+  margin: .5em;
+  color: #fff5ee;
+}
+
+.display {
+  width: 800px;
+  margin-left: 260px;
+  margin-right: auto;
+  /*width: 600px;*/
+  padding: 20px 20px 20px 20px;
+  border: 1px solid black;
+}
+
+div .bar {
+  display: inline-block;
+  width: 20px;
+  height: 75px;
+  background-color: teal;
+  margin-right: 2px;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: black;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  font-family: sans-serif;
+  font-size: 11px;
 }
