Added CSS to format D3 charts on page.  Need to adjust size

--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="scatter_display">
-    <button class="refresh">Update Data</button>
+    <button class="refresh">Timelapse</button>
   </div>
 </div>
 
