--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -11,7 +11,8 @@ html, body {
   }
 
 .itemdisplay {
-  margin-left: 100px;
+  display: inline;
+  margin-left: 10px;
   margin-top: 50px;
 }
 
@@ -26,9 +27,10 @@ html, body {
   color: #fff5ee;
 }
 
-.display {
+.scatter_display {
+  display: inline-block;
   width: 800px;
-  margin-left: 260px;
+  margin-left: auto;
   margin-right: auto;
   /*width: 600px;*/
   padding: 20px 20px 20px 20px;
