All D3 working on single page.

--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -9,6 +9,7 @@
   <div class="scatter_display">
     <button class="refresh">Timelapse</button>
   </div>
+  <div class="bubble_display"></div>
 </div>
 
 <script type="text/javascript">
@@ -84,7 +85,7 @@ var itemWidth = 620
 var itemHeight = 600
 // color design
 
-var itemColor = d3.scale.category20b();
+var itemColor = d3.scale.category20c();
 // create canvas
 var itemSvg = d3.select(".itemdisplay").append("svg")
     .attr("width", itemWidth)
@@ -130,15 +131,15 @@ itemForce.on("tick", function() {
 
 // ------ SCATTER PLOT ---------
 
-var dataset = [[5, 20], [480, 90], [250, 50], [100, 33], [330, 95], [410, 12], [475, 44], [25, 67], [85, 12], [220, 90], [600, 150], [70, 200], [40, 92], [25, 110], [10, 330], [33, 395], [450, 120], [45, 444], [225, 67], [331, 12], [22, 290], [60, 15], [50, 20], [400, 400], [350, 150], [120, 333], [133, 195], [410, 112], [275, 244], [256, 267], [385, 312], [220, 290], [600, 350], [170, 200], [240, 192], [225, 110], [110, 330], [133, 395], [450, 120], [45, 444], [225, 67], [331, 12], [22, 290], [60, 15]];
+var scatterData = [[5, 20], [480, 90], [250, 50], [100, 33], [330, 95], [410, 12], [475, 44], [25, 67], [85, 12], [220, 90], [600, 150], [70, 200], [40, 92], [25, 110], [10, 330], [33, 395], [450, 120], [45, 444], [225, 67], [331, 12], [22, 290], [60, 15], [50, 20], [400, 400], [350, 150], [120, 333], [133, 195], [410, 112], [275, 244], [256, 267], [385, 312], [220, 290], [600, 350], [170, 200], [240, 192], [225, 110], [110, 330], [133, 395], [450, 120], [45, 444], [225, 67], [331, 12], [22, 290], [60, 15]];
 
 d3.select(".refresh").on("click", function(){
 
-  dataset = [[5, 200], [440, 90], [250, 250], [100, 33], [330, 95], [500, 400], [45, 44], [25, 67], [75, 120], [290, 90], [60, 150], [70, 290], [540, 92], [25, 10], [10, 330], [33, 350], [40, 120], [45, 444], [225, 67], [31, 126], [22, 320], [60, 215], [150, 20], [400, 300], [350, 250], [120, 33], [233, 95], [110, 212], [75, 4], [26, 207], [315, 112], [120, 90], [60, 250], [570, 220], [40, 92], [22, 110], [110, 330], [133, 395], [50, 120], [45, 44], [22, 267], [31, 312], [322, 290], [40, 195]];
+  scatterData = [[5, 200], [440, 90], [250, 250], [100, 33], [330, 95], [500, 400], [45, 44], [25, 67], [75, 120], [290, 90], [60, 150], [70, 290], [540, 92], [25, 10], [10, 330], [33, 350], [40, 120], [45, 444], [225, 67], [31, 126], [22, 320], [60, 215], [150, 20], [400, 300], [350, 250], [120, 33], [233, 95], [110, 212], [75, 4], [26, 207], [315, 112], [120, 90], [60, 250], [570, 220], [40, 92], [22, 110], [110, 330], [133, 395], [50, 120], [45, 44], [22, 267], [31, 312], [322, 290], [40, 195]];
 
 // ------ TRANSITION ---------
 
-svg.selectAll("circle").data(dataset).transition().duration(2000).ease("linear").attr("cx", function(d) {
+svg.selectAll("circle").data(scatterData).transition().duration(2000).ease("linear").attr("cx", function(d) {
   return xScale(d[0]);
 }).attr("cy", function(d) {
   return yScale(d[1]);
@@ -153,28 +154,28 @@ svg.selectAll("circle").data(dataset).transition().duration(2000).ease("linear")
 //  dataset.push(newNumber);
 // }
 
-var w = 750;
-var h = 500;
-var padding = 30;
+var scatterChartWidth = 750;
+var scatterChartHeight = 500;
+var scatterPadding = 30;
 
-var xScale = d3.scale.linear().domain([0, d3.max(dataset, function(d){
+var xScale = d3.scale.linear().domain([0, d3.max(scatterData, function(d){
   return d[0];
-})]).range([padding, w - padding]);
+})]).range([scatterPadding, scatterChartWidth - scatterPadding]);
 
-var yScale = d3.scale.linear().domain([0, d3.max(dataset, function(d){
+var yScale = d3.scale.linear().domain([0, d3.max(scatterData, function(d){
   return d[1];
-})]).range([h - padding, padding]);
+})]).range([scatterChartHeight - scatterPadding, scatterPadding]);
 
-var rScale = d3.scale.linear().domain([0, d3.max(dataset, function(d){
+var rScale = d3.scale.linear().domain([0, d3.max(scatterData, function(d){
   return d[1];
 })]).range([2, 10]);
 
 var xAxis = d3.svg.axis().scale(xScale).orient("bottom");
 var yAxis = d3.svg.axis().scale(yScale).orient("left");
 
-var svg = d3.select(".scatter_display").append("svg").attr("width", w).attr("height", h);
+var svg = d3.select(".scatter_display").append("svg").attr("width", scatterChartWidth).attr("height", scatterChartHeight);
 
-svg.selectAll("circle").data(dataset).enter().append("circle").attr("cx", function(d) {
+svg.selectAll("circle").data(scatterData).enter().append("circle").attr("cx", function(d) {
   return xScale(d[0]);
 }).attr("cy", function(d) {
   return yScale(d[1]);
@@ -182,8 +183,118 @@ svg.selectAll("circle").data(dataset).enter().append("circle").attr("cx", functi
   return rScale(d[1]);
 }).attr("fill", "lightblue").attr("stroke", "blue").attr("stroke-width", 1);
 
-svg.append("g").attr("class", "axis").attr("transform", "translate(0," + (h - padding) + ")").call(xAxis);
-svg.append("g").attr("class", "axis").attr("transform", "translate(" + padding + ",0)").call(yAxis);
+svg.append("g").attr("class", "axis").attr("transform", "translate(0," + (scatterChartHeight - scatterPadding) + ")").call(xAxis);
+svg.append("g").attr("class", "axis").attr("transform", "translate(" + scatterPadding + ",0)").call(yAxis);
 
+
+// -------- AGE BUBBLE PLOT ---------
+var width = 280,
+    height = 200,
+    padding = 1.5, // separation between same-color nodes
+    clusterPadding = 6, // separation between different-color nodes
+    maxRadius = 6;
+
+var n = 100, // total number of nodes
+    m = 5; // number of distinct clusters
+
+var color = d3.scale.category20c()
+    .domain(d3.range(m));
+
+// The largest node for each cluster.
+var clusters = new Array(m);
+
+var nodes = d3.range(n).map(function() {
+  var i = Math.floor(Math.random() * m),
+      r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
+      d = {
+        cluster: i,
+        radius: r,
+        x: Math.cos(i / m * 2 * Math.PI) * 200 + width / 2 + Math.random(),
+        y: Math.sin(i / m * 2 * Math.PI) * 200 + height / 2 + Math.random()
+      };
+  if (!clusters[i] || (r > clusters[i].radius)) clusters[i] = d;
+  return d;
+});
+
+var force = d3.layout.force()
+    .nodes(nodes)
+    .size([width, height])
+    .gravity(.02)
+    .charge(0)
+    .on("tick", tick)
+    .start();
+
+var svgBubble = d3.select(".bubble_display").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+
+var node = svgBubble.selectAll("circle")
+    .data(nodes)
+  .enter().append("circle")
+    .style("fill", function(d) { return color(d.cluster); })
+    .call(force.drag);
+
+node.transition()
+    .duration(750)
+    .delay(function(d, i) { return i * 5; })
+    .attrTween("r", function(d) {
+      var i = d3.interpolate(0, d.radius);
+      return function(t) { return d.radius = i(t); };
+    });
+
+function tick(e) {
+  node
+      .each(cluster(10 * e.alpha * e.alpha))
+      .each(collide(.5))
+      .attr("cx", function(d) { return d.x; })
+      .attr("cy", function(d) { return d.y; });
+}
+
+// Move d to be adjacent to the cluster node.
+function cluster(alpha) {
+  return function(d) {
+    var cluster = clusters[d.cluster];
+    if (cluster === d) return;
+    var x = d.x - cluster.x,
+        y = d.y - cluster.y,
+        l = Math.sqrt(x * x + y * y),
+        r = d.radius + cluster.radius;
+    if (l != r) {
+      l = (l - r) / l * alpha;
+      d.x -= x *= l;
+      d.y -= y *= l;
+      cluster.x += x;
+      cluster.y += y;
+    }
+  };
+}
+
+// Resolves collisions between d and all other circles.
+function collide(alpha) {
+  var quadtree = d3.geom.quadtree(nodes);
+  return function(d) {
+    var r = d.radius + maxRadius + Math.max(padding, clusterPadding),
+        nx1 = d.x - r,
+        nx2 = d.x + r,
+        ny1 = d.y - r,
+        ny2 = d.y + r;
+    quadtree.visit(function(quad, x1, y1, x2, y2) {
+      if (quad.point && (quad.point !== d)) {
+        var x = d.x - quad.point.x,
+            y = d.y - quad.point.y,
+            l = Math.sqrt(x * x + y * y),
+            r = d.radius + quad.point.radius + (d.cluster === quad.point.cluster ? padding : clusterPadding);
+        if (l < r) {
+          l = (l - r) / l * alpha;
+          d.x -= x *= l;
+          d.y -= y *= l;
+          quad.point.x += x;
+          quad.point.y += y;
+        }
+      }
+      return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+    });
+  };
+}
 
 </script>
