--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -9,7 +9,9 @@ html, body {
     width:100%;
     display: table;
   }
-
+.bubble_display{
+  display: inline;
+}
 .itemdisplay {
   display: inline;
   margin-left: 10px;
@@ -29,7 +31,7 @@ html, body {
 
 .scatter_display {
   display: inline-block;
-  width: 800px;
+  width: 720px;
   margin-left: auto;
   margin-right: auto;
   /*width: 600px;*/
