--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -1,16 +1,22 @@
+<span class="navbar_format"><p>TEST TEXT</p></span>
+
 <div>
-  <p><a href="/users/">Users Test</a></p>
   <p class="display_text">Data Series</p>
+
   <div class="itemdisplay">
+
     <div class="itembox">
       <p id="visual-object-info"></p>
     </div>
   </div>
+
   <div class="scatter_display">
     <button class="refresh">Timelapse</button>
   </div>
   <div class="bubble_display"></div>
 </div>
+
+
 
 <script type="text/javascript">
 
