--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,14 +1,43 @@
 html, body {
-  background-color: #4c4c4c;
+  background-color: rgba(198,219,239,.90);
   /*height: 100%;*/
   /*margin: 0;*/
 }
 
+/*----- Main Navbar -----*/
 .navbar_format {
   display: inline-block;
   height: 50px;
   width: 100%;
   margin-bottom: 10px;
+  background-color: #4c4c4c;
+}
+
+.left_sidebar {
+  display: inline-block;
+  position: absolute;
+  height: 700px;
+  width: 180px;
+  /*margin-top: 50px;*/
+  background-color: rgba(198,219,239,.90);
+}
+
+.center_display {
+  display: inline-block;
+  margin-left: 190px;
+  margin-right: auto;
+  width: 1200px;
+  height: 700px;
+  background-color: rgba(198,219,239,.90);
+}
+
+.right_sidebar {
+  display: inline-block;
+  position: absolute;
+  height: 700px;
+  width: 290px;
+  margin-right: 10px;
+  margin-left: 10px;
   background-color: rgba(198,219,239,.90);
 }
 
@@ -18,10 +47,8 @@ html, body {
 }
 .itemdisplay {
   display: inline;
-  margin-left: 10px;
-  margin-top: 50px;
 }
-
+/*----- Text Display for D3 -----*/
 .itembox {
   display: none;
   position: absolute;
@@ -35,21 +62,22 @@ html, body {
 
 .scatter_display {
   display: inline-block;
-  width: 720px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 520px;
+  /*margin-left: auto;
+  margin-right: auto;*/
   /*width: 600px;*/
-  padding: 20px 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
   border: 1px solid black;
+  margin-top: 20px;
 }
 
-div .bar {
+/*div .bar {
   display: inline-block;
   width: 20px;
   height: 75px;
   background-color: teal;
   margin-right: 2px;
-}
+}*/
 
 .axis path,
 .axis line {
