--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,7 +1,6 @@
 html, body {
-  background-color: rgba(198,219,239,.90);
-  /*height: 100%;*/
-  /*margin: 0;*/
+  background-color: #b7c3d0;
+  margin: 0;
 }
 
 /*----- Main Navbar -----*/
@@ -19,7 +18,7 @@ html, body {
   height: 700px;
   width: 180px;
   /*margin-top: 50px;*/
-  background-color: rgba(198,219,239,.90);
+  background-color: #b7c3d0;
 }
 
 .center_display {
@@ -28,9 +27,14 @@ html, body {
   margin-right: auto;
   width: 1200px;
   height: 700px;
-  background-color: rgba(198,219,239,.90);
+  background-color: #b7c3d0;
 }
 
+.center_display h1 {
+  font-family: helvetica;
+  text-align: center;
+  color: #4c4c4c;
+}
 .right_sidebar {
   display: inline-block;
   position: absolute;
@@ -38,15 +42,16 @@ html, body {
   width: 290px;
   margin-right: 10px;
   margin-left: 10px;
-  background-color: rgba(198,219,239,.90);
+  background-color: #b7c3d0;
 }
 
 /*----- D3 -----*/
-.bubble_display{
+.force_plot_display {
   display: inline;
 }
-.itemdisplay {
+.bubble_display{
   display: inline;
+  margin-left: 10px;
 }
 /*----- Text Display for D3 -----*/
 .itembox {
